# dip-strike-tools

./: .env  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CITATION.cff  CONTRIBUTING.md  CREDITS.md  LICENSE  README.md  REUSE.toml  justfile  pyproject.toml
.github/: copilot-instructions.md  labeler.yml
.github/ISSUE_TEMPLATE/: config.yml
.github/workflows/: auto-labeler.yml  documentation.yml  linter.yml  package_and_release.yml  tester.yml
dip_strike_tools/: CHANGELOG.md  CREDITS.md  LICENSE  __about__.py  __init__.py  metadata.txt  plugin_main.py
dip_strike_tools/core/: __init__.py  dip_strike_calculator.py  dip_strike_map_tool.py  dip_strike_math.py  elevation_utils.py  feature_finder.py  layer_creator.py  layer_utils.py  rubber_band_marker.py
dip_strike_tools/data/: geo_type_symbols.qml
dip_strike_tools/gui/: dlg_calculate_values.py  dlg_create_layer.py  dlg_field_config.py  dlg_info.py  dlg_info.ui  dlg_insert_dip_strike.py  dlg_insert_dip_strike.ui  dlg_settings.py  dlg_settings.ui
dip_strike_tools/resources/i18n/: dip_strike_tools_it.ts  plugin_translation.pro
dip_strike_tools/resources/qml/: single_symbol.qml
dip_strike_tools/toolbelt/: __init__.py  env_var_parser.py  log_handler.py  preferences.py  qt_compat.py  utils.py
docker/oem/: install.bat
docs/: conf.py  index.md  license.md
docs/development/: documentation.md  environment.md  packaging.md  pyqt-compatibility.md  testing.md  translation.md
docs/usage/: calculate-values.md  data-insertion.md  installation.md  layer-creation.md  overview.md  settings.md
requirements/: development.txt
scripts/: generate_translation_profile.py
tests/: conftest.py
tests/integration/: __init__.py  test_dip_strike_calculator.py  test_dip_strike_map_tool.py  test_dlg_insert_dip_strike.py  test_elevation_utils.py  test_feature_finder.py  test_plg_preferences.py  test_plugin_main_qgis.py  test_qgis_env.py
tests/qgis/: test_dip_strike_calculator.py  test_dip_strike_map_tool.py  test_dlg_insert_dip_strike.py  test_elevation_utils.py  test_env_var_parser.py  test_feature_finder.py  test_plg_preferences.py  test_plugin_main_qgis.py  test_processing.py
tests/unit/: test_dip_strike_calculator.py  test_dip_strike_map_tool.py  test_dip_strike_math.py  test_dlg_calculate_values.py  test_dlg_create_layer.py  test_dlg_field_config.py  test_dlg_insert_dip_strike.py  test_elevation_utils.py  test_env_var_parser.py  test_layer_creator.py  test_layer_utils.py  test_plg_metadata.py  test_plugin_main.py
